make code foldable

--- a/ui/src/ide/IDE.scss
+++ b/ui/src/ide/IDE.scss
@@ -348,6 +348,7 @@ a {
         flex-direction: column;
         height: calc(100vh - 45px);
         position: relative;
+        padding-bottom: 500px;
     }
 
     .editor-body {
