--- a/ui/src/ide/IDE.scss
+++ b/ui/src/ide/IDE.scss
@@ -17,6 +17,10 @@ a {
     transition: all 0.3s ease-in-out;
 }
 
+.fileItem{
+    white-space: nowrap;
+}
+
 .theme-btn {
     border: 1px solid #583bd8;
     border-radius: 10px;
