Running Ipython kernel on mac

--- a/ui/src/ide/IDE.scss
+++ b/ui/src/ide/IDE.scss
@@ -385,6 +385,7 @@ a {
             padding-left: 17px;
             margin-top: 14px;
             position: relative;
+            background: #eaf3fb;
         }
 
         .single-line .inner-text p {
