nudge successful, kernel acks request

--- a/ui/src/ide/IDE.scss
+++ b/ui/src/ide/IDE.scss
@@ -369,6 +369,7 @@ a {
         height: calc(100vh - 199px);
         overflow-y: scroll;
         margin-right: 7px;
+        scrollbar-width: thin;
         /* Handle */
 
         .single-line {
