cell execute result and serialization of content payload added

--- a/ui/src/ide/editor/NotebookEditor.scss
+++ b/ui/src/ide/editor/NotebookEditor.scss
@@ -19,6 +19,8 @@
     gap: 32px;
     padding: 18px 18px 13px 18px;
     border: 1px solid #cccccc;
+    border-bottom: none;
+    background: aliceblue;
     color: #acacac;
     height: 20px;
     float: right;
