--- a/ui/src/ide/editor/NotebookEditor.scss
+++ b/ui/src/ide/editor/NotebookEditor.scss
@@ -29,3 +29,14 @@
 .editor-select{
     width: 200px;
 }
+
+.activeCell{
+    border: 2px solid #acacac;
+    border-radius: 4px;
+    margin-bottom: 20px;
+    padding: 20px;
+}
+
+.activeCell:focus{
+    border: 2px solid #4a2ccf;
+}
