--- a/ui/src/ide/IDE.scss
+++ b/ui/src/ide/IDE.scss
@@ -374,8 +374,8 @@ a {
 
         .single-line {
             gap: 8px;
-            display: flex;
             margin-bottom: 16px;
+            padding: 20px;
         }
 
         .single-line .inner-content {
