--- a/ui/src/ide/IDE.scss
+++ b/ui/src/ide/IDE.scss
@@ -44,7 +44,7 @@ a {
     color: #fff;
 }
 .editor {
-    border: 2px solid #6f57da;
+    border: 2px solid #473990;
     width: 100%;
     height: 100vh;
 }
@@ -52,14 +52,14 @@ a {
 .statusBar {
     width: 100%;
     height: 100%;
-    background-color: #4a2ccf;
+    background-color: #473990;
     color: #ffffff;
 }
 
 .topBar {
     width: 100%;
     height: 100%;
-    background-color: #4a2ccf;
+    background-color: #473990;
     color: #ffffff;
     padding: 2px 40px;
 
@@ -81,11 +81,16 @@ a {
 
     .search-wraper input {
         border: 1px solid #E2DFEB;
+        color: #ffffff;
         padding: 8px 15px;
-        border-radius: 20px;
+        border-radius: 2px;
         position: relative;
         width: 100%;
         padding-left: 45px;
+        background-color: #5f568f;
+    }
+    .search-wraper input::placeholder {
+        color: #fff;
     }
 
     .search-wraper img {
@@ -199,6 +204,7 @@ a {
 
     .navigation-list {
         border-right: 1px solid #e0dceb;
+        background: #f3f1fd;
         padding: 9px;
         display: flex;
         flex-direction: column;
