--- a/ui/src/ide/IDE.scss
+++ b/ui/src/ide/IDE.scss
@@ -360,6 +360,7 @@ a {
     }
 
     .editor-body2 {
+        color: #000;
         width: 100%;
         overflow: auto;
         display: flex;
@@ -370,6 +371,7 @@ a {
     }
 
     .editor-body {
+        color: #000;
         padding: 28px 18px;
         padding-right: 30px;
         height: calc(100vh - 199px);
