--- a/ui/src/ide/editor/notebook/NotebookEditor.scss
+++ b/ui/src/ide/editor/notebook/NotebookEditor.scss
@@ -12,6 +12,10 @@
     color: #747474;
     font-size: 17px;
 }
+.cellOptionsDiv{
+    width: 100%;
+    height: 35px;
+}
 
 .cellOptions{
     display: flex;
@@ -32,4 +36,77 @@
 .activeCell{
     border: 2px solid #4a2ccf;
     border-radius: 4px;
+}
+
+ .editor-body {
+    color: #000;
+    padding: 28px 18px;
+    padding-right: 30px;
+    height: calc(100vh - 199px);
+    overflow-y: scroll;
+    margin-right: 7px;
+    scrollbar-width: thin;
+    /* Handle */
+
+    .single-line {
+        gap: 8px;
+        padding: 10px;
+    }
+
+    .single-line .inner-content {
+        display: flex;
+    }
+
+
+    .single-line tr:nth-child(odd) {
+        background: #ffffff;
+    }
+
+    .single-line tr:nth-child(even) {
+        background: #f3f2f6;
+    }
+
+    .serial-no {
+        color: #473990;
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 24px;
+        margin-top: 5px;
+    }
+
+    .cellEditor{
+        flex: 1;
+        padding: 0 5px;
+        width: 100%; // stop editor from overflowing to right
+    }
+}
+
+.editor-body::-webkit-scrollbar {
+    width: 7px;
+}
+
+.editor-body::-webkit-scrollbar-thumb {
+    background: #9f9f9f;
+    border-radius: 100px;
+}
+
+.inner-text {
+    padding-left: 17px;
+    margin-top: 14px;
+    position: relative;
+    background: #eaf3fb;
+
+    p {
+        margin-bottom: 0;
+        color: #747474;
+        font-weight: 700;
+    }
+}
+
+.cm-editor {
+    background: #f5f5f5;
+    border: 2px solid #d3d3d3;
+    border-radius: 10px;
+    padding: 2px;
+    
 }
