--- a/ui/src/ide/editor/notebook/NotebookEditor.scss
+++ b/ui/src/ide/editor/notebook/NotebookEditor.scss
@@ -104,9 +104,7 @@
 }
 
 .cm-editor {
-    background: #f5f5f5;
-    border: 2px solid #d3d3d3;
-    border-radius: 10px;
-    padding: 2px;
+    background: #ffffff;
+    border: 1px solid #d3d3d3;
     
 }
