--- a/ui/src/ide/IDE.scss
+++ b/ui/src/ide/IDE.scss
@@ -57,6 +57,8 @@ a {
 }
 
 .themeLight{
+    width: 100%;
+    height: 100vh;
     .topBar{
         background-color: #473990;
     }
@@ -66,9 +68,18 @@ a {
     .navigation-list{
         background: #f3f1fd;
     }
+    .tab-content{
+        background-color: #272727;
+    }
 }
 
 .themeDark{
+    width: 100%;
+    height: 100vh;
+    background-color: #000000;
+    .main-content{
+        background-color: #000000;
+    }
     .topBar{
         background-color: #000000;
     }
@@ -80,12 +91,25 @@ a {
     .navigation-list{
         background: #272727;
     }
+    .nav-content{
+        color: #fff;
+    }
     .nav-link{
         background-color: #272727;
     }
     .navigation .nav-content .content-inner .file-list li a {
         background-color: #272727;
         color: #fff;
+    }
+    .tabContent{
+        background-color: #272727;
+    }
+    .topBar .search-wraper input {
+        background-color: #272727;
+    }
+    
+    .main-content .tab-content{
+        background-color: #272727;
     }
 }
 
