--- a/ui/src/ide/IDE.scss
+++ b/ui/src/ide/IDE.scss
@@ -36,7 +36,6 @@ a {
     width: 100%;
     padding-top: 10px;
     padding-left: 10px;
-    background-color: #392e6b;
 }
 
 .theme-btn:hover {
@@ -70,6 +69,9 @@ a {
     }
     .tab-content{
         background-color: #272727;
+    }
+    .terminalArea{
+        background-color: #392e6b;
     }
 }
 
@@ -110,6 +112,9 @@ a {
     
     .main-content .tab-content{
         background-color: #272727;
+    }
+    .terminalArea{
+        background-color: #2b2a2a;
     }
 }
 
