--- a/ui/src/ide/IDE.scss
+++ b/ui/src/ide/IDE.scss
@@ -324,14 +324,13 @@ a {
         .content-head {
             height: 50px;
             display: flex;
-            align-items: center;
             justify-content: space-between;
-            padding: 16px 17px 12px 19px;
+            padding: 16px 12px 12px 16px;
             border-bottom: 1px solid #e0dceb;
     
-            .h6 {
-                margin-bottom: 0;
-                color: #000000;
+            h6 {
+                font-weight: 400;
+       
             }
         
             a {
@@ -342,10 +341,12 @@ a {
         }
 
         .content-inner {
+            width: 100%;
             padding-left: 9px;
             padding-right: 17px;
             padding-top: 13px;
             height: calc(100vh - 50px);
+            padding-bottom: 120px;
             overflow: hidden;
             overflow-y: scroll;
 
@@ -365,12 +366,13 @@ a {
 
             .file-list li a {
                 height: $fileBrowserItemHeight;
-                font-size: 14px;
+                font-size: 15px;
+                font-weight: 300;
                 line-height: $fileBrowserItemHeight;
                 background: #fff;
                 border-radius: 5px;
                 width: 100%;
-                color: #747474;
+                color: #3c3c3c;
                 padding: 0 12px;
             }
 
@@ -420,6 +422,9 @@ a {
     margin-left: 5px;
     margin-right: 12px;
     height: calc(100vh - 28px);
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 27px;
 
     .tab-content {
         box-shadow: 0px 3px 20px #0000001c;
