make the status bar interactive

--- a/ui/src/ide/IDE.scss
+++ b/ui/src/ide/IDE.scss
@@ -53,6 +53,9 @@ a {
     height: 100%;
     background-color: #473990;
     color: #ffffff;
+    font-size: 16px;
+    padding: 0 40px;
+    font-weight: 300;
 }
 
 .themeLight{
