--- a/ui/src/ide/IDE.scss
+++ b/ui/src/ide/IDE.scss
@@ -84,6 +84,15 @@ a {
     }
 }
 
+$font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
+
+// classes for each font size
+@each $size in $font-sizes {
+  .zfont-#{$size} {
+    font-size: #{$size}px;
+  }
+}
+
 .themeDark{
     width: 100%;
     height: 100vh;
@@ -435,7 +444,6 @@ a {
     margin-left: 5px;
     margin-right: 12px;
     height: calc(100vh - 28px);
-    font-size: 16px;
     font-weight: 300;
     line-height: 27px;
 
