--- a/ui/src/ide/IDE.scss
+++ b/ui/src/ide/IDE.scss
@@ -148,22 +148,25 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
 
 .topBar {
     width: 100%;
-    height: 100%;
+    height: 96%;
     color: #ffffff;
     padding: 2px 40px;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 
     .logo-white{
         height: 44px;
     }
 
     .searchArea {
-	    display: flex;
+	    
 	    flex-wrap: wrap;
 	    flex-direction: column-reverse;
+        vertical-align:middle;
+        height: 90%;
 	}
 
     .search-wraper {
-        vertical-align:middle;
+        
 	    position: relative;
 	    width: 60%;
 	}
@@ -340,10 +343,10 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
         height: 100%;
 
         .content-head {
-            height: 50px;
+            height: 40px;
             display: flex;
             justify-content: space-between;
-            padding: 16px 12px 12px 16px;
+            padding: 10px 12px 12px 16px;
             border-bottom: 1px solid #e0dceb;
     
             h6 {
@@ -358,10 +361,32 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
             }
         }
 
+        .projectName{
+            box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+            width: 100%;
+            height: 28px;
+            padding-top: 2px;
+            padding-left: 1rem;
+            color: #fff;
+            background-color: #553b9e;
+            font-weight: 400;
+            display: flex;
+
+            div{
+                float: left;
+                margin-right: 40px;
+            }
+
+            .projectButtons{
+                fill: #ffffff;
+            }
+            
+        }
+
         .content-inner {
             width: 100%;
             padding-right: 17px;
-            padding-top: 13px;
+            padding-top: 8px;
             height: calc(100vh - 50px);
             padding-bottom: 120px;
             overflow: hidden;
@@ -438,7 +463,10 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
     overflow-y: scroll;
 }
 
-
+.tab-item{
+    font-size: 14px;
+    line-height: 22px;
+}
 
 .main-content {
     margin-left: 5px;
@@ -491,13 +519,14 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
 .nav-link {
     // background: transparent linear-gradient(180deg, #ffffff 0%, #e6e6e6 100%) 0%
     // 0% no-repeat;
-    background: #553b9e;
-    font-weight: 400;
+    
+    font-weight: 300;
     border: 1px solid #e6e6e6;
-    border-radius: 2px 10px 0px 0px;
+    border-radius: 2px 5px 0px 0px;
     padding: 6px 8px;
     color: #ffffff;
     box-sizing: border-box;
+    background: #7651db;
 
     i {
         margin-left: 10px;
@@ -507,13 +536,15 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
 }
 .nav-link:hover{
     color: #ffffff;
-    background: #7651db;
+    background: #553b9e;
 }
 
 
 .nav-link.active {
     color: #ffffff;
-    background: #7651db;
+    font-weight: 400;
+    background: #553b9e;
+    
 }
 
 .tabContent {
