--- a/ui/src/ide/editor/notebook/NotebookEditor.scss
+++ b/ui/src/ide/editor/notebook/NotebookEditor.scss
@@ -114,8 +114,9 @@
     }
 }
 
-.cm-editor {
-    // border: 1px solid #553b9e;
+
+.cellEditor .cm-editor {
+    border: 1px solid #553b9e;
     border-radius: 2px;
 }
 
