--- a/ui/src/ide/editor/Launcher.scss
+++ b/ui/src/ide/editor/Launcher.scss
@@ -1,16 +1,33 @@
+.launcher-title {
+    border-bottom: 1px solid #f3f2f6;
+    padding: 0px 40px;
+    padding-bottom: 20px;
+}
+
+.launchSection{
+    padding: 20px;
+    border-bottom: 1px solid #f3f2f6;
+}
+
 .launcher-icon{
     display: inline-block;
-    height: 200px;
-    width: 200px;
-    border: 1px solid #b1b0b0;
-    margin: 20px;
+    height: 150px;
+    width: 150px;
+    border: 1px solid #cfcfcf;
     border-radius: 5px;
     padding: auto;
     background-color: #f3f2f6;
     align-content: center;
     text-align: center;
     box-shadow: #b1b0b0;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 6px;
+    cursor: pointer;
 }
+
+.launcher-icon:hover{
+    background-color: #e3e1e9;
+}
+
 
 .terminalIconImage{
     height: 64px;
