--- a/ui/src/ide/topbar/TopBar.scss
+++ b/ui/src/ide/topbar/TopBar.scss
@@ -8,3 +8,12 @@
     padding-left: 45px;
     background-color: #5f568f;
 }
+
+.userName{
+    font-weight: 400;
+    margin-top: 2px;
+    border-radius: 5px;
+    vertical-align: middle;
+    text-align: center;
+    padding: 5px 10px;
+}
