--- a/ui/src/ide/sidebar/ContextMenu.scss
+++ b/ui/src/ide/sidebar/ContextMenu.scss
@@ -5,12 +5,16 @@
     border: 1px solid #ccc;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     z-index: 1000;
-    width: 150px;
+    width: 12   0px;
+    border-radius: 5px;
   }
   
 .context-menu-item {
-    padding: 8px 12px;
+    padding: 4px 12px;
     cursor: pointer;
+    color: #473990;
+    font-size: 12px;
+    font-weight: 400;
 }
 
 .context-menu-item:hover {
