--- a/ui/src/ide/editor/Launcher.scss
+++ b/ui/src/ide/editor/Launcher.scss
@@ -22,6 +22,7 @@
     box-shadow: #b1b0b0;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 6px;
     cursor: pointer;
+    margin-right: 20px;
 }
 
 .launcher-icon:hover{
