Feat: Zasper is polyglot  🚀 🚀 🚀

--- a/ui/src/ide/editor/notebook/NotebookEditor.scss
+++ b/ui/src/ide/editor/notebook/NotebookEditor.scss
@@ -168,3 +168,14 @@
     height: 22px;
     margin-top: -10px;
 }
+
+.svgContainer {
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+}
+
+.spinner {
+    margin: 0px;
+}
