--- a/ui/src/ide/sidebar/GitPanel/GitPanel.scss
+++ b/ui/src/ide/sidebar/GitPanel/GitPanel.scss
@@ -1,18 +1,18 @@
 @use "../../../variables" as *;
 
-.projectName{
+.projectName {
   background-color: $primary-color;
-  padding:0.5rem;
-  color: white;
+  padding: 0.5rem;
+  color: $white-color;
 }
 
 .graph-container {
   display: flex;
   flex-direction: column;
   align-items: start;
-  background-color: #fff;
+  background-color: $white-color;
   border-radius: 8px;
-  color: black;
+  color: $black-color;
   position: relative;
   width: 100%;
 }
@@ -20,7 +20,7 @@
 .commit-node {
   height: 40px;
   background-color: $primary-color;
-  color: #fff;
+  color: $white-color;
   padding: 10px;
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
@@ -66,7 +66,7 @@
   border: 1px solid #e6e6e6;
   border-radius: 4px;
   padding: 6px 18px;
-  color: #ffffff;
+  color: $white-color;
   box-sizing: border-box;
   background: $primary-color;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
@@ -81,23 +81,16 @@
   flex-direction: column;
 }
 
-.git-graph-container {
-  // position: relative;
-  // background-color: #1e1e1e;
-  // padding: 16px;
-  // border-radius: 8px;
-}
-
 .git-graph-svg {
-  background-color: #fff;
+  background-color: $white-color;
   border-radius: 8px;
 }
 
 .commit-node {
   fill: #6a0dad;
-  stroke: #ffffff;
+  stroke: $white-color;
   font-size: 12px;
-  color: white;
+  color: $white-color;
   cursor: pointer;
   transition: transform 0.2s;
 
@@ -111,15 +104,6 @@
   stroke-width: 2px;
 }
 
-.commit-popup {
-  position: absolute;
-  background: rgba(0, 0, 0, 0.9);
-  color: white;
-  padding: 10px;
-  border-radius: 5px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
-  pointer-events: none;
-}
 
 .commit-row {
   display: flex;
@@ -148,11 +132,10 @@
 
 .commit-text {
   margin-left: 12px;
-  color: black;
+  color: $black-color;
   font-size: 14px;
   cursor: pointer;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  // max-width: 250px;
 }
