--- a/ui/src/ide/sidebar/GitPanel/GitPanel.scss
+++ b/ui/src/ide/sidebar/GitPanel/GitPanel.scss
@@ -1,5 +1,4 @@
-@use "../../../variables" as *;
-
+@use '../../../variables' as *;
 
 .graph-container {
   display: flex;
@@ -20,7 +19,7 @@
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   margin-bottom: 10px;
-  width: "200px";
+  width: '200px';
 }
 
 .commit-message {
@@ -98,7 +97,6 @@
   stroke: #6a0dad;
   stroke-width: 2px;
 }
-
 
 .commit-row {
   display: flex;
