update eslint format of topbar, terminal & command files

--- a/ui/src/ide/topbar/TopBar.scss
+++ b/ui/src/ide/topbar/TopBar.scss
@@ -1,19 +1,19 @@
-.openCommandPaletteButton{
-    border: 1px solid #E2DFEB;
-    color: #ffffff;
-    padding: 8px 15px;
-    border-radius: 2px;
-    position: relative;
-    width: 100%;
-    padding-left: 45px;
-    background-color: #5f568f;
+.openCommandPaletteButton {
+  border: 1px solid #e2dfeb;
+  color: #ffffff;
+  padding: 8px 15px;
+  border-radius: 2px;
+  position: relative;
+  width: 100%;
+  padding-left: 45px;
+  background-color: #5f568f;
 }
 
-.userName{
-    font-weight: 400;
-    margin-top: 2px;
-    border-radius: 5px;
-    vertical-align: middle;
-    text-align: center;
-    padding: 5px 10px;
+.userName {
+  font-weight: 400;
+  margin-top: 2px;
+  border-radius: 5px;
+  vertical-align: middle;
+  text-align: center;
+  padding: 5px 10px;
 }
