--- a/ui/src/ide/IDE.scss
+++ b/ui/src/ide/IDE.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
 
-$fileBrowserItemHeight: 28px;
+$fileBrowserItemHeight: 35px;
 
 body {
   font-family: 'Ubuntu', sans-serif;
@@ -121,11 +121,15 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
   width: 100%;
   height: 100vh;
   background-color: #000000;
+
+  *{
+    scrollbar-color: #1c1c1c #313131;
+  }
   .main-content {
     background-color: #3e3e3e;
   }
   .topBar {
-    background-color: #000000;
+    background-color: #303030;
   }
 
   .navigation {
@@ -185,7 +189,7 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
   }
 
   .openCommandPaletteButton {
-    background: #353535;
+    background: #474747;
   }
   .command-palette {
     background: #353535;
@@ -195,6 +199,7 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
   }
   .LauncherArea {
     color: #ffffff;
+    background: #1e1e1e;
   }
 
   .editor-body .single-line {
@@ -246,6 +251,11 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
     svg {
       fill: #ffffff;
     }
+  }
+
+  .breadcrumbArea{
+    color: #d2d2d2;
+    border-bottom: 1px solid #252525;
   }
 }
 
@@ -421,11 +431,12 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
     height: 100%;
 
     .content-head {
-      height: 40px;
+      height: 42px;
       display: flex;
       justify-content: space-between;
       padding: 10px 12px 12px 16px;
       border-bottom: 1px solid #e0dceb;
+      font-size: 16px;
 
       h6 {
         font-weight: 400;
@@ -498,13 +509,13 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
 
       .file-list li a {
         height: $fileBrowserItemHeight;
-        font-size: 15px;
-        font-weight: 300;
+        font-size: 18px;
+        font-weight: 400;
         line-height: $fileBrowserItemHeight;
         background: #fff;
         border-radius: 5px;
         width: 100%;
-        color: #3c3c3c;
+        color: #646464;
         padding: 0 12px;
       }
 
@@ -515,9 +526,10 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
       }
 
       .file-list li a img {
-        margin-right: 8px;
-        min-width: 14px;
-        height: 14px;
+        margin-right: 12px;
+        min-width: 26px;
+        max-width: 26px;
+        height: 20px;
       }
 
       .file-list li a.active {
