--- a/ui/src/ide/IDE.scss
+++ b/ui/src/ide/IDE.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
 
 $fileBrowserItemHeight: 32px;
+$darkThemeFontColor: #e2e2e2;
 
 body {
   font-family: 'Ubuntu', sans-serif;
@@ -84,6 +85,9 @@ a {
   width: 100%;
   height: 100vh;
 }
+.editor-body2{
+  background-color: #272727;
+}
 
 .themeLight {
   width: 100%;
@@ -121,6 +125,7 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
   width: 100%;
   height: 100vh;
   background-color: #000000;
+  color: $darkThemeFontColor;
 
   *{
     scrollbar-color: #1c1c1c #313131;
@@ -143,7 +148,7 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
     background: #272727;
   }
   .nav-content {
-    color: #fff;
+    color: $darkThemeFontColor;
   }
   .nav-link {
     background-color: #545454;
@@ -153,12 +158,12 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
   .nav-link.active {
     color: #ffffff;
     font-weight: 400;
-    background: #272727;
+    background: #424242;
   }
 
   .navigation .nav-content .content-inner .file-list li a {
     background-color: #272727;
-    color: #fff;
+    color: $darkThemeFontColor;
   }
   .tabContent {
     background-color: #272727;
@@ -174,11 +179,11 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
     background-color: #2b2a2a;
   }
   .launchItem {
-    color: #fff;
+    color: $darkThemeFontColor;
   }
   .launcher-icon {
     background-color: #272727;
-    color: #fff;
+    color: $darkThemeFontColor;
     border: 1px solid #4f4f4f;
   }
   .directoryIcon {
@@ -198,7 +203,7 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
     background-color: #3f3855;
   }
   .LauncherArea {
-    color: #ffffff;
+    color: $darkThemeFontColor;
     background: #1e1e1e;
   }
 
@@ -207,7 +212,7 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
   }
 
   .serial-no {
-    color: #ffffff;
+    color: $darkThemeFontColor;
   }
   .launchSection {
     border-bottom: 1px solid #89888b;
@@ -217,14 +222,14 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
   }
   .list-group-item {
     background-color: #272727;
-    color: #fff;
+    color: $darkThemeFontColor;
   }
   .graph-container {
     background-color: #272727;
-    color: #fff;
+    color: $darkThemeFontColor;
   }
   .commit-text {
-    color: #fff;
+    color: $darkThemeFontColor;
   }
   .navigation-list {
     border-right: 1px solid #000;
@@ -236,7 +241,7 @@ $font-sizes: 8, 10, 12, 14, 16, 18, 20, 22, 24;
 
   .modal-body {
     background: #272727;
-    color: #fff;
+    color: $darkThemeFontColor;
   }
   .modal {
     background: rgba(255, 255, 255, 0.5);
